# tree-sitter-tereix

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build.zig  build.zig.zon  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tereix.pc.in
bindings/c/tree_sitter/: tree-sitter-tereix.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tereix/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/zig/: root.zig  test.zig
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
