[package]
name = "tree-sitter-tereix"
description = "Tree-sitter grammar for Tereix"
version = "0.1.0"
authors = ["ChaosTheChaotic"]
license = "GPL-3.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tereix"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/chaosthechaotic/tree-sitter-tereix.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
